# SJTU-SE-SEP2024

./: README.md  jimijimi.7z  sep2024.7z
QBasic/: .gitignore  CMakeLists.txt  CodesInCodeDisplay.cpp  CodesInCodeDisplay.h  Expression.cpp  Expression.h  Program.cpp  Program.h  Statement.cpp  Statement.h  Variable.cpp  Variable.h  cmdInput.cpp  cmdInput.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp  util.h
QBasic/examples/: fail1.basic  fail2.basic  frac.basic  stairs.basic  test1.basic  test2.basic  try.basic
QLink/: .gitignore  BoxOfGame.cpp  BoxOfGame.h  CMakeLists.txt  Gadget.cpp  Gadget.h  LinkGame.cpp  LinkGame.h  MainPage.cpp  MainPage.h  Player.cpp  Player.h  README.md  SavePage.cpp  SavePage.h  SaveSystem.cpp  SaveSystem.h  SelectChecker.cpp  SelectChecker.h  SimpleTest.cpp  SimpleTest.h  SpecialAlgorithm.h  main.cpp
debug_lab1/: p1.cpp  p2.cpp  p4.cpp  p5.cpp
debug_lab2/: core.cpp
lab6/: boggle.cpp
